--- a/css/style.css
+++ b/css/style.css
@@ -129,9 +129,14 @@ a:hover {
 
 .button {
     border: 2px solid whitesmoke;
-    border-radius: 5px;
-    padding: 5px 5px 5px 5px;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     font-size:4vw;
+}
+.button:hover {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-style: italic;
 }
 
 .view {
@@ -140,13 +145,13 @@ a:hover {
 }
 
 .main-text {
-    padding: 350px 0px 350px;
+    padding: 25rem 0rem 25rem 0rem;
 }
 
 /* screen larger than mobile */
 @media only screen and (min-width:480px) {
-    .view {
-        padding: 400px 0rem 400px;
+    .main-text {
+        padding: 25rem 0rem 25rem 0rem;
     }
     .white {
         font-size:4vw;
@@ -156,3 +161,7 @@ a:hover {
         font-size:1vw;
     }
 }
+
+/* #hompage h2{
+    color: rebeccapurple;
+} */
