--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,9 @@ p {
     margin-bottom: 1.3rem;
 }
 
+
 /*this is a group selection, selecting all the headlines h1-h4*/
+
 h1,
 h2,
 h3,
@@ -58,6 +60,7 @@ h4 {
 
 /*Interactive elements*/
 
+
 /* link*/
 
 a {
@@ -70,8 +73,12 @@ a:hover {
     font-style: italic;
 }
 
+
 /*button style*/
+
+
 /*solid button style*/
+
 .btn-primary {
     /*    font-family: 'Merriweather', serif;*/
     /*    font-weight: 700;*/
@@ -94,7 +101,9 @@ a:hover {
     opacity: 0.8;
 }
 
+
 /*outline button style*/
+
 .btn-outline-primary {
     font-size: 1rem;
     letter-spacing: .1rem;
@@ -113,26 +122,29 @@ a:hover {
     border-color: darkblue;
 }
 
+
 /* Centered text */
+
 .centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: whitesmoke;
-  }
+}
 
 .white {
     color: whitesmoke;
-    font-size:8vw;
+    font-size: 8vw;
 }
 
 .button {
     border: 2px solid whitesmoke;
     border-radius: 0.5rem;
     padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-    font-size:4vw;
+    font-size: 4vw;
 }
+
 .button:hover {
     color: rgb(255, 255, 255);
     text-decoration: none;
@@ -142,25 +154,32 @@ a:hover {
 .view {
     background: lightblue url('/Users/jlee/Desktop/SENIOR/Artdes245/245webdesign/assignments/img/home_image_web@2x.jpg') center center no-repeat;
     background-size: cover;
+    height: 100vh;
+}
+
+.view .row {
+    height: 100vh;
 }
 
 .main-text {
-    padding: 25rem 0rem 25rem 0rem;
+    /* padding: 25rem 0rem 25rem 0rem; */
 }
+
 
 /* screen larger than mobile */
+
 @media only screen and (min-width:480px) {
     .main-text {
-        padding: 25rem 0rem 25rem 0rem;
+        /* padding: 25rem 0rem 25rem 0rem; */
     }
     .white {
-        font-size:4vw;
-
+        font-size: 4vw;
     }
     .button {
-        font-size:1vw;
+        font-size: 1vw;
     }
 }
+
 
 /* #hompage h2{
     color: rebeccapurple;
