--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ ul {
     width: auto;
     padding: 16px;
     margin-top: -50px;
-    color: white;
+    color: rgb(255, 0, 0);
     font-weight: bold;
     font-size: 20px;
     transition: 0.6s ease;
