--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,11 @@ ul {
     line-height: 2.4rem;
 }
 
+
+/* 
 .row {
     padding: 5rem;
-}
+} */
 
 .row>.column {
     padding: 0 8px;
@@ -329,4 +331,12 @@ img.hover-shadow {
 
 .demo {
     width: 100%;
+}
+
+.padding {
+    padding: 6rem 0 0 2.3rem;
+}
+
+.row-padding {
+    padding: 0.5rem;
 }
